# palubicki

./: .gitignore  README.md  pyproject.toml
.claude/commands/: work.md  workitems.md
.github/workflows/: ci.yml
docs/: 2026-05-27-simulation-review.md  2026-05-29-codebase-review.md  export-pipeline-design.md  mindset-boucle-empirique.md  next-features.md  render-pipeline.md  roadmap.md  simulation-loop.md  tree-data-model.md
docs/botany/: code-support-matrix.md  plant-structure.md  realism-assessment.md  simulator-gap-analysis.md  sources.md
docs/plans/: 2026-05-30-epinasty.md
docs/superpowers/plans/: 2026-05-25-bhse-v1-impl.md  2026-05-25-v2-bhls-hybrid.md  2026-05-25-v3-obstacles-forest.md  2026-05-26-render-headless-png.md  2026-05-26-v4-species-presets.md  2026-05-27-phase1-realism-foundations.md  2026-05-27-phase2a-branching-architecture.md  2026-05-27-phase2b-bud-lifecycle.md  2026-05-27-phase2c-phyllotaxy-leaves.md  2026-05-27-phase2d-temporal-dynamics.md  2026-05-27-realtime-editor.md  2026-05-27-tree-diagnostics.md  2026-05-28-distichous-phyllotaxy.md  2026-05-28-parametric-leaf-blade.md  2026-05-28-root-flare.md  2026-05-29-bark-diameter-blend.md  2026-05-29-time-phenology-axis.md  2026-05-29-vigor-driven-internode-length.md  2026-05-30-conifer-foliage-along-shoot.md  2026-05-30-epinasty.md  2026-05-30-per-species-literature-ranges.md  2026-05-31-compound-leaves.md  2026-05-31-leaves-first-class-node-attributes.md  2026-05-31-petiole-geometry.md  2026-05-31-visualize-sim-internals.md
docs/superpowers/roadmap/: v2-bhls-light-shadowing.md  v3-obstacles-inter-tree.md  v4-species-presets.md
docs/superpowers/specs/: 2026-05-25-bhse-v1-design.md  2026-05-25-v2-bhls-hybrid-design.md  2026-05-25-v3-obstacles-forest-design.md  2026-05-26-render-headless-png-design.md  2026-05-26-v4-species-presets-design.md  2026-05-27-phase1-realism-foundations-design.md  2026-05-27-phase2a-branching-architecture-design.md  2026-05-27-phase2b-bud-lifecycle-design.md  2026-05-27-phase2c-phyllotaxy-leaves-design.md  2026-05-27-phase2d-temporal-dynamics-design.md  2026-05-27-realtime-editor-design.md  2026-05-27-tree-diagnostics-design.md  2026-05-28-distichous-phyllotaxy-design.md  2026-05-28-parametric-leaf-blade-design.md  2026-05-28-root-flare-design.md  2026-05-29-bark-diameter-blend-design.md  2026-05-30-epinasty-design.md  (+8 more)
scripts/: extract_botany_values.py  fetch_botany_sources.py  mesh_digest.py  probe_banked_vigor.py  profile_pipeline.py  profile_sim.py  regen_leaf_visuals.py  sim_digest.py  snap_per_iter.py  sweep_broadleaf_crown.py  sweep_pine_cone.py  verify_digests.sh
src/palubicki/: __main__.py  cli.py  config.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_emergent_presets.py  test_config_leaf_cluster.py  test_config_species.py  test_config_variants.py  test_config_yaml.py  test_extract_botany_values.py
tests/edit/: test_config_io.py  test_schema.py  test_server.py
tests/export/: test_gltf.py  test_gltf_forest.py  test_gltf_materials.py
tests/fixtures/: forest_minimal.yaml
tests/geom/: test_bark_blend.py  test_builder.py  test_builder_bark_texture.py  test_builder_pbr.py  test_builder_petiole.py  test_compound_leaf.py  test_leaf_blade.py  test_leaf_blade3d.py  test_leaf_cluster.py  test_leaf_texture.py  test_leaves.py  test_leaves_from_nodes.py  test_maps.py  test_mesh.py  test_obstacle_geom.py  test_proc_scheme.py  test_radii.py  test_textures.py  test_tubes.py  test_wind.py
tests/golden/: conftest.py  test_goldens.py  test_species_goldens.py
tests/integration/: test_botanical_guardrail.py  test_decussate_maple.py  test_diameter_progression.py  test_elongation_chronology.py  test_emergent_broadleaf_crown.py  test_emergent_cone.py  test_epinasty.py  test_forest_behavior.py  test_light_behavior.py  test_obstacles_behavior.py  test_phenology.py  test_plagiotropy_horizontalizes.py  test_reiteration_after_shed.py  test_shade_avoidance_initiation.py  test_shade_carves_canopy.py  test_shade_relief_differential.py  test_shadow_propagation.py  test_smoke.py  test_sun_shade_oak.py  test_sympodial_emergence.py
tests/render/: test_camera.py  test_init.py  test_io.py  test_render_integration.py  test_renderer.py
tests/sim/: test_bh.py  test_bud_break_bias.py  test_caducity.py  test_clock.py  test_debug_capture.py  test_diagnostics.py  test_elongation.py  test_envelope.py  test_forest.py  test_forest_species.py  test_leaf.py  test_light_grid.py  test_light_perception.py  test_markers.py  test_metric_ranges.py  test_obstacle_voxelize.py  test_obstacles.py  test_phyllotaxy.py  test_phyllotaxy_per_axis.py  test_radii.py  test_reiteration.py  test_sag.py  test_shade_avoidance.py  test_shade_mortality.py  test_shadow.py  test_shedding.py  test_simulator.py  test_simulator_bud_break_bias.py  test_simulator_light_capture.py  test_space_competition.py  test_sympodial.py  test_tree.py  test_tree_bud.py  test_tropisms.py
(+84 files in other folders)
