[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palubicki"
version = "0.1.0"
description = "Self-organizing 3D tree generator (Palubicki et al. 2009) exporting glTF"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pygltflib>=1.16",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "trimesh>=4.0",
    "rtree>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.15",
]
render = [
    "matplotlib>=3.7",
]
edit = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.scripts]
palubicki = "palubicki.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/palubicki"]

[tool.hatch.build.targets.wheel.force-include]
"src/palubicki/configs/species" = "palubicki/configs/species"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration and golden tests (deselect with -m 'not slow')",
]
addopts = "-ra"

[tool.coverage.run]
source = ["src/palubicki"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "B008",   # function calls in argument defaults (FastAPI/typer idiom)
    "SIM108", # ternary-vs-if is a readability judgement call here
]

[tool.ruff.lint.isort]
known-first-party = ["palubicki"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]  # tests import lazily inside functions by design
